--- a/wazirx/wazirx.yaml
+++ b/wazirx/wazirx.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: Wazirx Spot API
-  description: Official WazirX Trading Platform API.
+  description: Official WazirX Crypto Trading Platform API enables users to retrieve information on trading symbols, 24-hour trading data, order book depth, and recent trades.
   version: 1.0.0
 servers:
   - url: https://api.wazirx.com
@@ -15,9 +15,10 @@ paths:
       tags:
         - Common APIs > General APIs
       summary: Exchange Info
-      description: Returns the current system status
+      description: Retrieve information on all available trading symbols, including their current trading status, base and quote assets, precision, allowed order types, and related filters. 
+      operationId: getExchangeInfo
       responses:
-        "200":
+        '200':
           description: Successful response
           content:
             application/json: {}
@@ -25,10 +26,11 @@ paths:
     get:
       tags:
         - Common APIs > Public APIs
-      summary: Tickers
-      description: 24 hour rolling window price change statistics
+      summary: All Tickers 24-hour rolling window price
+      description: Retrieve 24-hour rolling window price change data for all symbols, including prices, volume, bid/ask prices, and timestamp
+      operationId: getAllTickers24hr
       responses:
-        "200":
+        '200':
           description: Successful response
           content:
             application/json: {}
@@ -36,8 +38,9 @@ paths:
     get:
       tags:
         - Common APIs > Public APIs
-      summary: Ticker
-      description: 24 hour rolling window price change statistics for a requested market
+      summary: Ticker 24-hour rolling window price
+      description: Retrieve 24-hour rolling window price change data for a symbol, including prices, volume, bid/ask prices, and timestamp
+      operationId: getTicker24hr
       parameters:
         - name: symbol
           in: query
@@ -45,7 +48,7 @@ paths:
             type: string
           example: btcinr
       responses:
-        "200":
+        '200':
           description: Successful response
           content:
             application/json: {}
@@ -53,8 +56,9 @@ paths:
     get:
       tags:
         - Common APIs > Public APIs
-      summary: Order Book Depth
-      description: 24 hour rolling window price change statistics for a requested market
+      summary: Order Book Depth for a Ticker
+      description: Obtain the order book depth for a specified symbol, including the last update timestamp, ask and bid prices, and corresponding quantities.
+      operationId: getOrderBookDepth
       parameters:
         - name: symbol
           in: query
@@ -68,9 +72,9 @@ paths:
           description: >-
             Default 20; max 1000. Valid limits:[1, 5, 10, 20, 50, 100, 500,
             1000]
-          example: "10"
+          example: '10'
       responses:
-        "200":
+        '200':
           description: Successful response
           content:
             application/json: {}
@@ -78,10 +82,9 @@ paths:
     get:
       tags:
         - Common APIs > Public APIs
-      summary: Recent Trades
-      description: >-
-        Get recent trades on market. Trades are sorted in latest to oldest
-        (descending) order
+      summary: Recent Trades for a Ticker
+      description: Retrieve recent trades for a specified symbol, including trade ID, price, quantity, quote quantity, timestamp, and buyer maker status.
+      operationId: getRecentTrades
       parameters:
         - name: symbol
           in: query
@@ -93,9 +96,9 @@ paths:
           schema:
             type: integer
           description: Default 500; max 1000.
-          example: "10"
+          example: '10'
       responses:
-        "200":
+        '200':
           description: Successful response
           content:
             application/json: {}
